# spider

./: 'o  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  benchmark_compile.py  pyproject.toml  requirements.txt  run_example.sh  setup.py
docs/guide/: installation.md
docs/workflows/: workflow-dexmachina.md
examples/: run_dexmachina.py  run_hdmi.py  run_hdmi.sh  run_mjwp.py  tutorial.ipynb
examples/config/: default.yaml  dexmachina.yaml  hdmi.yaml  mjwp.yaml
examples/config/override/: fair_mon.yaml  humanoid.yaml  humanoid_object.yaml
spider/: config.py  interp.py  io.py  math.py  mujoco_utils.py
spider/assets/mano/: contact_scene.xml  empty_scene.xml
spider/assets/robots/ability/: left.xml  right.xml
spider/assets/robots/allegro/: left.xml  right.xml
spider/assets/robots/inspire/: right.xml
spider/examples/: __init__.py  run_mjwp.py
spider/optimizers/: __init__.py  sampling.py
spider/postprocess/: __init__.py  get_humanoid_tracking_err.py  get_success_rate.py  get_success_rate_batch.py  read_to_fre_real.py  read_to_hdmi.py  read_to_robot.py
spider/preprocess/: decompose.py  decompose_fast.py  detect_contact.py  generate_xml.py  ik.py  locomujoco.py  process_all_mesh.py
spider/process_datasets/: fair_fre.py  fair_mon.py  gigahand.py  gmr.py  hot3d.py  load_and_viz_data.py  oakink.py
spider/simulators/: __init__.py  dexmachina.py  dexmachina_test.py  hdmi.py  hdmi_test.py  isaac.py  mjwp.py  mjwp_eq.py  mjwp_test.py
spider/tasks/: __init__.py
spider/viewers/: __init__.py  mj_dr_viewer.py  mjcpu_viewer.py  mjwp_viewer.py  rerun_viewer.py
(+7 files in other folders)
