[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "torch",
  "loguru",
  "tyro",
  "loop-rate-limiters",
  "hydra-core",
  "matplotlib",
  "imageio[ffmpeg]",
  "opencv-python",
  "newton[examples] @ git+https://github.com/newton-physics/newton.git",
  "rerun-sdk",
]

[project.scripts]
spider-mjwp = "examples.run_mjwp:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["spider"]